--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 <div class="visible md:invisible mobile">
   <div class="ml-10 mt-5 mb-5 mr-10">
     <div>Olá, sou Tereza Andrade e faço UI/UX Design.</div>
-    <div>A versão mobile do meu site ainda não está pronta :(</div>
+    <div>A versão mobile do meu portfólio ainda não está pronta :(</div>
     <div>Mas aqui vai um resuminho:</div>
   </div>
   <div class="ml-10 mt-5 mb-5">
-    <div class="text-lg font-bold">Portfolio</div>
+    <div class="text-lg font-bold">Portfólio</div>
     <div>
       <a href="https://www.figma.com/proto/zdLuqZbvkL97WS0HpKYGrW/Projeto-App-de-V%C3%ADdeos?page-id=0%3A1&node-id=2%3A3&viewport=836%2C709%2C0.9&scaling=scale-down&starting-point-node-id=2%3A3"
         class="text-md text-[#F6B0A3]">
